[package]
name = "dts-lsp"
version = "0.1.5"
authors = ["Igor Prusov <prusovigor@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Language Server for Device Tree Source files"
repository = "https://github.com/igor-prusov/dts-lsp"
homepage = "https://github.com/igor-prusov/dts-lsp"
documentation = "https://github.com/igor-prusov/dts-lsp"
keywords = ["dts", "lsp", "language-server", "device-tree"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = ["walkdir"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
streaming-iterator = "0.1.9"
tokio = { version = "1.40.0", features = [ "full" ] }
tower-lsp = "0.20.0"
tree-sitter = "0.24.3"
tree-sitter-devicetree = "0.12.1"
walkdir = { version = "2.5.0", optional = true }
